# eigenvue

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_algorithm.md
.github/workflows/: ci.yml  deploy-npm.yml  deploy-pypi.yml  deploy-web.yml  e2e.yml  lighthouse-ci.yml
algorithms/classical/bfs/: generator.ts  meta.json
algorithms/classical/binary-search/: generator.ts  meta.json
algorithms/classical/bubble-sort/: generator.ts
algorithms/classical/dfs/: generator.ts  meta.json
algorithms/classical/dijkstra/: generator.ts
algorithms/classical/heap-sort/: generator.ts
algorithms/classical/merge-sort/: generator.ts  meta.json
algorithms/classical/quicksort/: generator.ts
algorithms/deep-learning/backpropagation/: generator.ts  meta.json
algorithms/deep-learning/convolution/: generator.ts  meta.json
algorithms/deep-learning/feedforward-network/: generator.ts
algorithms/deep-learning/gradient-descent/: generator.ts  meta.json
algorithms/deep-learning/perceptron/: generator.ts  meta.json
algorithms/generative-ai/multi-head-attention/: generator.ts  meta.json
algorithms/generative-ai/self-attention/: generator.ts  meta.json
algorithms/generative-ai/token-embeddings/: generator.ts  meta.json
algorithms/generative-ai/tokenization-bpe/: generator.ts
algorithms/generative-ai/transformer-block/: generator.ts  meta.json
algorithms/quantum/grovers-search/: generator.ts
algorithms/quantum/quantum-gates/: generator.ts
algorithms/quantum/quantum-teleportation/: generator.ts
algorithms/quantum/qubit-bloch-sphere/: generator.ts  meta.json
algorithms/quantum/superposition-measurement/: generator.ts
docs/: astro.config.mjs  package-lock.json  package.json
docs/.astro/: content-modules.mjs  data-store.json  settings.json
docs/src/components/: AlgorithmCard.astro  ApiSignature.astro  ComplexityBadge.astro  ParameterTable.astro  StepFormatDiagram.astro
docs/src/styles/: custom.css
node/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
node/src/: catalog.ts  cli.ts  index.ts  runner.ts  server.ts
node/src/generators/: registry.ts
python/: .env.example  README.md  pyproject.toml
python/src/eigenvue/: __init__.py  _jupyter.py  _step_types.py  catalog.py  runner.py  server.py
python/src/eigenvue/data/algorithms/: backpropagation.meta.json  bubble-sort.meta.json  convolution.meta.json  dijkstra.meta.json  feedforward-network.meta.json  gradient-descent.meta.json  grovers-search.meta.json  heap-sort.meta.json  perceptron.meta.json  quantum-gates.meta.json  quantum-teleportation.meta.json  quicksort.meta.json  superposition-measurement.meta.json  tokenization-bpe.meta.json
python/src/eigenvue/data/web/: index.html  styles.css  visualizer.js
python/src/eigenvue/generators/: __init__.py
python/src/eigenvue/generators/classical/: __init__.py  bfs.py  binary_search.py  bubble_sort.py  dfs.py  dijkstra.py  heap_sort.py  merge_sort.py  quicksort.py
python/src/eigenvue/generators/deep_learning/: __init__.py  backpropagation.py  convolution.py  feedforward_network.py  gradient_descent.py  perceptron.py
python/src/eigenvue/generators/generative_ai/: __init__.py  multi_head_attention.py  self_attention.py  token_embeddings.py  tokenization_bpe.py  transformer_block.py
python/src/eigenvue/generators/quantum/: __init__.py  grovers_search.py  quantum_gates.py  quantum_teleportation.py  qubit_bloch_sphere.py  superposition_measurement.py
python/src/eigenvue/math_utils/: __init__.py  dl_math.py  genai_math.py  quantum_math.py
python/tests/: conftest.py  test_api.py  test_catalog.py  test_cross_language_parity.py  test_generators.py  test_math.py  test_placeholder.py  test_server.py  test_viewer_assets.py
scripts/: analyze-bundle.ts  build-standalone-viewer.mjs  bundle-node-data.py  bundle-python-data.py  check-bundle-size.sh  check-docs-links.sh  generate-algorithm-docs.py  generate-og-images.ts  precompute-steps.py  prepare-release.sh  smoke-test.sh  sync-generators.py  test-docs-build.sh  validate-schemas.py  validate-workflows.sh  verify-step-parity.py
shared/: STEP_FORMAT.md  meta.schema.json  package-lock.json  package.json  step-format.schema.json  tsconfig.json
shared/fixtures/: binary-search-found.fixture.json  binary-search-not-found.fixture.json  edge-cases.fixture.json  minimal-valid.fixture.json  single-element.fixture.json
shared/types/: __init__.py  index.ts  step.py  step.ts
shared/validation/: validate.py  validate.ts
tests/node/: catalog.test.ts  cli.test.ts  runner.test.ts  viewer-assets.test.ts
tests/python/: conftest.py  test_cross_language_parity_quantum.py  test_generate_algorithm_docs.py  test_generators_quantum.py  test_precompute_steps.py  test_quantum_math.py  test_step_format.py  test_sync_generators.py
tests/web/: step-format.test.ts
tests/web/e2e/: seo.spec.ts  visual.spec.ts
tests/web/generators/: backpropagation.test.ts  convolution.test.ts  feedforward-network.test.ts  gradient-descent.test.ts  grovers-search.test.ts  perceptron.test.ts  quantum-gates.test.ts  quantum-teleportation.test.ts  qubit-bloch-sphere.test.ts  superposition-measurement.test.ts
tests/web/visual/: scene-snapshots.test.ts
verifications/: eigenvue_features.ipynb  npm-usage-guide.html
verifications/dev_verification_1.0.0/: eigenvue_features.ipynb  npm-usage-guide.html
verifications/prod_verification_1.0.1/: build_notebook.py  eigenvue_v1.0.1_production_verification.ipynb  index.html  package-lock.json  package.json  verification-report.json  verify.mjs
web/: .env.example  .firebaserc  eslint.config.mjs  firebase.json  lighthouse-budget.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/public/: manifest.json  sw.js
web/src/app/: layout.tsx  page.test.tsx  page.tsx  robots.ts  sitemap.ts
web/src/engine/: OffscreenCanvasManager.ts  VisualizationPanel.tsx  color.ts  (+1 more)
(+312 files in other folders)
