[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigenvue"
version = "0.1.0"
description = "The visual learning platform for understanding algorithms, AI architectures, and quantum computing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ashutosh Mishra", email = "ashutoshm1771@gmail.com" },
]
keywords = [
    "algorithms",
    "visualization",
    "deep-learning",
    "generative-ai",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://eigenvue.web.app/"
Repository = "https://github.com/ashutoshm1771/eigenvue"
Issues = "https://github.com/ashutoshm1771/eigenvue/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/eigenvue"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
