# =============================================================================
# Eigenvue Python Package — Build Configuration
#
# This is the single source of truth for the eigenvue PyPI package.
# Uses PEP 621 metadata and hatchling as the build backend.
#
# INSTALL: pip install eigenvue
# DEV:     pip install -e ".[dev]"
# TEST:    pytest
# LINT:    ruff check . && ruff format --check .
# TYPE:    mypy src/eigenvue
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigenvue"
version = "1.0.1"
description = "The visual learning platform for understanding algorithms, AI architectures, and quantum computing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ashutosh Mishra", email = "ashutoshm1771@gmail.com" },
]
keywords = [
    "visualization",
    "algorithms",
    "deep-learning",
    "transformers",
    "education",
    "jupyter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
    "Typing :: Typed",
]

# ── Runtime Dependencies ─────────────────────────────────────────────────────
# Minimal and justified. Each dependency is here for a specific reason.
dependencies = [
    "flask>=3.0,<4.0",         # Local visualization server for show()
]

[project.optional-dependencies]
# Jupyter integration (optional — only needed for jupyter() API)
jupyter = [
    "ipython>=8.0",
]
# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "jsonschema>=4.20",         # For validation tests
]

[project.urls]
Homepage = "https://eigenvue.web.app/"
Repository = "https://github.com/ashutoshm1771/eigenvue"
"Bug Tracker" = "https://github.com/ashutoshm1771/eigenvue/issues"

# ── Build Configuration ──────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/eigenvue"]

# ── Tool Configuration ───────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "IPython.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # annotations
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long (generators have long explanation strings)
    "E741",    # Ambiguous variable name (l, I, O) — conventional in math code
    "D401",    # First line of docstring should be in imperative mood
    "SIM108",  # Use ternary operator instead of if-else (readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring server startup",
]
